src/objects/Residential_Cost_Sheet__c.object
<CustomObject>
    <fields>
        <fullName>Advance_Against_Maintenance__c</fullName>
        <formula>Total_Carpet_Area_SQFT__c  *  Maintenance_Charges__c  * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advance Against Maintenance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carpet_Area_as_defined_in_RERA_SQFT__c</fullName>
        <formula>CEILING(Carpet_Area_as_defined_in_RERA_SQMTS__c  * 10.764)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carpet Area as defined in RERA_SQFT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carpet_Area_as_defined_in_RERA_SQMTS__c</fullName>
        <label>Carpet Area as defined in RERA_SQMTS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carpet_Area_of_Private_Terrace_SQFT__c</fullName>
        <formula>Carpet_Area_of_Private_Terrace_SQMTS__c  * 10.764</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carpet Area of Private Terrace_SQFT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carpet_Area_of_Private_Terrace_SQMTS__c</fullName>
        <label>Carpet Area of Private Terrace_SQMTS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carpet_Area_of_balcony_sanctioned_SQFT__c</fullName>
        <formula>Carpet_Area_of_balcony_sanctioned_SQMTS__c  * 10.764</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carpet Area of balcony sanctioned_SQFT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carpet_Area_of_balcony_sanctioned_SQMTS__c</fullName>
        <label>Carpet Area of balcony sanctioned_SQMTS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Central_GST__c</fullName>
        <formula>( Net_Consideration_Value__c  * 2 / 3 )  * 9 / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Central GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GST_on_Annual_Advance_Maintenance_18__c</fullName>
        <formula>Advance_Against_Maintenance__c  *  18 / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GST on Annual Advance Maintenance (@18%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Charges_2_Depend_Stack__c</fullName>
        <label>Infrastructure Charges 2 - Depend/ Stack</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Charges__c</fullName>
        <label>Infrastructure Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSEB_Development_Charges__c</fullName>
        <label>MSEB &amp; Development Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_Charges__c</fullName>
        <label>Maintenance Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Consideration_Value__c</fullName>
        <formula>Unit_Cost__c  +  MSEB_Development_Charges__c  +  Infrastructure_Charges__c  +  Premium_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Consideration Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cost Sheets</relationshipLabel>
        <relationshipName>Cost_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Plan Type</label>
        <referenceTo>Payment_Plan__c</referenceTo>
        <relationshipLabel>Cost Sheets</relationshipLabel>
        <relationshipName>Cost_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_input_field__c</fullName>
        <label>Premium Rate Calculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Premium_Charges_Rate__c</fullName>
        <formula>Premium_Unit_Charges__c  +  (  Premium_Unit_Charges__c  *  Percent_input_field__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premium Charges Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Charges__c</fullName>
        <formula>Floor__c  *  Premium_Charges_Rate__c  *  Total_Carpet_Area_SQFT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premium Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Regular_Rate__c</fullName>
        <formula>Regular_Unit_Rate__c  +  (  Regular_Unit_Rate__c  *  Percent_input_field__c  )</formula>
        <label>Premium Regular Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Unit_Charges__c</fullName>
        <label>Premium Unit Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Cost Sheets</relationshipLabel>
        <relationshipName>Cost_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchaser_Name__c</fullName>
        <label>Purchaser Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refundable_Corpus_Fund_Deposit__c</fullName>
        <label>Refundable Corpus Fund (Deposit)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Charges__c</fullName>
        <label>Registration Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regular_Unit_Rate__c</fullName>
        <label>Regular Unit Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_Duty__c</fullName>
        <formula>Net_Consideration_Value__c  *  ( 6 / 100 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stamp Duty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_GST__c</fullName>
        <formula>(  Net_Consideration_Value__c  * 2 / 3 )  * 9 / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subvention_Premium_Rate__c</fullName>
        <formula>Subvention_Unit_Rate__c    +   (  Subvention_Unit_Rate__c  *  Percent_input_field__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subvention Premium Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subvention_Unit_Rate__c</fullName>
        <label>Subvention Unit Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Carpet_Area_SQFT__c</fullName>
        <formula>Carpet_Area_as_defined_in_RERA_SQFT__c  +  Carpet_Area_of_balcony_sanctioned_SQFT__c  +  Carpet_Area_of_Private_Terrace_SQFT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Carpet Area_SQFT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Carpet_Area_SQMTS__c</fullName>
        <formula>Carpet_Area_as_defined_in_RERA_SQMTS__c  +  Carpet_Area_of_balcony_sanctioned_SQMTS__c  +  Carpet_Area_of_Private_Terrace_SQMTS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Carpet Area_SQMTS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Charges_Payable_at_Possession__c</fullName>
        <formula>Advance_Against_Maintenance__c  +  GST_on_Annual_Advance_Maintenance_18__c  +  Refundable_Corpus_Fund_Deposit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Charges Payable at Possession</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Government_Charges__c</fullName>
        <formula>Stamp_Duty__c  +  Registration_Charges__c  +  Central_GST__c  +  State_GST__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Government Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tower</label>
        <referenceTo>Tower__c</referenceTo>
        <relationshipLabel>Cost Sheets</relationshipLabel>
        <relationshipName>Cost_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Configuration__c</fullName>
        <label>Unit Configuration</label>
        <picklist>
            <picklistValues>
                <fullName>1 Bedroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Bedroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Bedroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Bedroom</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <formula>Total_Carpet_Area_SQFT__c  *  Subvention_Premium_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wing__c</fullName>
        <label>Wing</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Residential Cost Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cost Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>